# logging

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  conanfile.py  main.c  makefile  test.sh
.github/workflows/: linux_test.yml  windows_test.yml
include/: logging.h
include/logging/: logging-core.h  logging-filter.h  logging-handler.h  logging-interceptor.h
script/: format.sh  test.sh  test_windows.ps1
src/: CMakeLists.txt  logging-handler.c  logging-interceptor.c  logging.c
src/filter/: logging-filter-substr.c
src/handler/: logging-handler-console.c  logging-handler-file.c
src/interceptor/: logging-interceptor-substr.c
src/utils/: logging-utils.c  logging-utils.h
test_package/: main.c  test_interceptor.c
tests/: CMakeLists.txt  test-filter.c  test-log-file.c  test-simple.c  test_interceptor.c  test_simple.c
